# nontainer-studio

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: AgentMessage.svelte  Artifact.svelte  Cards.svelte  ChatInput.svelte  DataTable.svelte  FileModal.svelte  FilesTab.svelte  HistoryTab.svelte  Markdown.svelte  MessageList.svelte  ModelPicker.svelte  PlotlyChart.svelte  Preview.svelte  SessionRail.svelte  SplitPane.svelte  ThinkingBlock.svelte  ToolGroup.svelte  ToolStep.svelte  api.js  diff.js  markdown.js  runtime.svelte.js  sniff.js  viewer.svelte.js
nontainer_studio/: __init__.py  dummy.py  model.py  providers.py  server.py  sessions.py
nontainer_studio/static/: app.js  index.html
nontainer_studio/static/assets/: index-3dUuqIB5.css  index-4YrvnMa6.css  index-5WrxajQA.js  index-5pmVr2oG.css  index-6_q-SGCl.css  index-7w81kzSj.js  index-B1L_qewV.js  index-B2h2qr0d.js  index-BBNeE6dK.css  index-BBNutTky.js  index-BBbRworn.css  index-BLq5OOKI.js  index-BPaahvKu.js  index-BQMxDrEm.js  index-BUsA54dz.js  index-BVa5Nkki.js  index-BZKLHpkm.js  index-B_ZIe8Vg.js  index-BbruuCWZ.css  index-BhPOzaCd.css  index-BmJbgthq.js  index-BnX2bJgQ.js  index-Bp40RhvW.js  index-Bs1hDOs-.css  index-Bv_KlXu3.js  index-Bww5xgxn.css  index-Bx7GsbPk.css  index-BxhLA_Fi.js  index-C0pzTm3G.js  index-C3QA7AKy.js  index-C4aCsTpA.js  index-C8-9DX_C.js  index-CAVRm3mm.css  index-CGd0C1T5.css  index-CMmDcqE1.js  index-C__hXBhT.js  index-Cg2qpzP5.css  index-Ckb6nQCC.css  index-CktXRfJF.css  index-Cs_pzPFT.css  (+23 more)
skills/building-apps/: SKILL.md
skills/building-apps/references/: preact-app.html
tests/: test_e2e.py  test_providers.py  test_server.py
