[project]
name = "nontainer-studio"
version = "0.0.1"
description = "A local AI workbench over nontainer: chat, versioned workspaces, live app preview."
readme = "README.md"
license = "MIT"
authors = [
    {name = "ashenfad"},
]
requires-python = ">=3.10"
dependencies = [
    "nontainer[agno,apps]>=0.0.1",
    # sessions.py drives kvgit directly (branch deletion); 0.3.1 fixed
    # delete_branch leaving deleted branches recoverable
    "kvgit[disk]>=0.3.1",
    "uvicorn>=0.30",
    # agno's SqliteDb (durable chat) requires sqlalchemy
    "sqlalchemy>=2",
    # the agent's data stack — nontainer presets grant these
    # opportunistically; the studio wants them out of the box
    "numpy",
    "pandas",
    "pyarrow",
    "matplotlib",
    # NOTE: no kaleido — plotly's fig.write_image can't run inside the
    # sandbox (kaleido validates the Chrome binary path and builds temp
    # dirs through the VFS, then needs a real Chrome subprocess). The
    # primer steers agents to matplotlib for static images.
    "plotly",
    # provider SDKs: anthropic + openai cover the default detection
    # order (openai also carries OpenRouter and OpenAI-compatible
    # endpoints); google/ollama SDKs are opt-in installs
    "anthropic",
    "openai",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx2",  # starlette TestClient
]

[project.scripts]
nontainer-studio = "nontainer_studio.server:main"

[project.urls]
"Source" = "https://github.com/ashenfad/nontainer-studio"

# nontainer isn't on PyPI yet (and the studio needs core changes that
# currently live on its `studio` branch) — develop against a sibling
# checkout. TODO: switch to a git/PyPI source once those changes land.
[tool.uv.sources]
nontainer = { path = "../nontainer", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nontainer_studio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
