[project]
name = "nontainer-studio"
version = "0.0.1"
description = "A local AI workbench over nontainer: chat, versioned workspaces, live app preview."
readme = "README.md"
license = "MIT"
authors = [
    {name = "ashenfad"},
]
requires-python = ">=3.10"
dependencies = [
    # 0.2.1: delete_workspace — session deletion (branch teardown,
    # legacy __void__ purge) is nontainer's now; studio no longer
    # drives kvgit directly, so kvgit is only a transitive dep here.
    # 0.2.0 brought the workspace root contract (files at /workspace
    # across executors) on top of 0.1.2's Executor seam.
    "nontainer[agno,apps]>=0.2.1",
    # session identity is a minted slug (sleepy-meerkat), never a
    # typed name — the label the human reads is the title
    "petname>=2.6",
    "uvicorn>=0.30",
    # agno's SqliteDb (durable chat) requires sqlalchemy
    "sqlalchemy>=2",
    # the agent's data stack — nontainer presets grant these
    # opportunistically; the studio wants them out of the box
    "numpy",
    "pandas",
    "pyarrow",
    "matplotlib",
    # NOTE: no kaleido — plotly's fig.write_image can't run inside the
    # sandbox (kaleido validates the Chrome binary path and builds temp
    # dirs through the VFS, then needs a real Chrome subprocess). The
    # primer steers agents to matplotlib for static images.
    "plotly",
    # provider SDKs: anthropic + openai cover the default detection
    # order (openai also carries OpenRouter and OpenAI-compatible
    # endpoints); google/ollama SDKs are opt-in installs
    "anthropic",
    "openai",
    # agno's compression watermark counts tokens; without these it
    # falls back to a chars/4 estimate and warns on every new model id
    "tiktoken",
    "tokenizers",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx2",  # starlette TestClient
]
# Powers NONTAINER_STUDIO_EXECUTOR=dud / dud-vm (real-machine / microVM
# execution via nontainer's DudExecutor). dud requires >=3.11; the
# marker keeps the studio's 3.10 floor for everyone not opting in.
dud = [
    # 0.2.1: guest workspace mounts AT /workspace — the same absolute
    # paths the local sandbox teaches (staging internals stashed away).
    # 0.2.0 never published (its tag shipped a stale version).
    "dud>=0.2.1; python_version >= '3.11'",
]

[project.scripts]
nontainer-studio = "nontainer_studio.server:main"

[project.urls]
"Source" = "https://github.com/ashenfad/nontainer-studio"

# nontainer IS on PyPI (that's what the dependency above resolves to,
# and what CI tests against). The sibling link is a uv-only convenience
# for CO-DEVELOPMENT: the two repos are developed as one, so a local
# checkout sees core changes before they're released. pip ignores this
# table.
#
# Standing pin, unlike the sandtrap/dud entries that lived here for the
# /workspace root contract — those are retired now that sandtrap 0.2.12
# and dud 0.2.1 ship the pieces studio needs, and both resolve from
# PyPI like any other dependency.
[tool.uv.sources]
nontainer = { path = "../nontainer", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nontainer_studio"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E731"]

[tool.pytest.ini_options]
testpaths = ["tests"]
